:Fixed alignment of disclosure

--- a/client/default/resources/sass/main.scss
+++ b/client/default/resources/sass/main.scss
@@ -72,7 +72,7 @@ Styling for list
   width: 0.8em!important;
   height: 0.8em!important;
   background-size:100% 100%!important ;
-  bottom: 1.4em;
+  bottom: 1.4em !important;
 }
 
 .expenseCls{
